tests/context_duplicate_with_field_bad.stderr
tests/context_duplicate_with_field_bad.sl:10:16: error: SL1004: unexpected token
